# lib/models/service-provider.js
@@ -29,6 +29,10 @@ ServiceProvider.fields = [
   {
     name: 'registration_hook',
     type: 'string',
+  },
+  {
+    name: 'ms_teams_fqdn',
+    type: 'string',
   }
 
 ];
